--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
-spring.application.name=crud-app
+# ???? ??????????
+server.port=8080
+
+# ???? ?????? H2 (? ??????)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# ??????? H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# SQL ??????? ? ???????
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ????????????? ????????? ???????
+spring.jpa.hibernate.ddl-auto=update
+
+# Thymeleaf
+spring.thymeleaf.cache=false
