feature/pagination-filtering-search Java 21 working in progress

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# База данных SQLite
+data/
+*.db
+*.sqlite
+*.db-journal
+
+# Служебные файлы SQLite
+*.db-shm
+*.db-wal
