--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,34 @@
-# ???? ??????????
-server.port=8080
+# ============ H2 ????????? ============
 
-# ???? ?????? H2 (? ??????)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./data/cruddb;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# ??????? H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=update
 
-# SQL ??????? ? ???????
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# ????????????? ????????? ???????
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-# Thymeleaf
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+# ============ ????? ????????? ============
+
+server.port=8080
+
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
+app.page-size.default=10
+app.page-size.options=5,10,20,50
+
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
